--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
 
     body {
       font-family: 'Montserrat', sans-serif;
-      background: linear-gradient(135deg, #000000, #0a031a, #000000);
-      background-size: 400% 400%;
-      animation: bgPulse 25s ease infinite;
+      background: #000;
       color: #e0e0ff;
       min-height: 100vh;
       display: flex;
@@ -28,45 +26,28 @@
       padding: 16px;
     }
 
-    /* Мерцающие звёзды */
-    body::before {
-      content: "";
+    #particles-js {
       position: absolute;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background-image:
-        radial-gradient(2px 2px at 20% 30%, #fff5, 0 2px),
-        radial-gradient(2px 2px at 70% 60%, #fffa, 0 2px),
-        radial-gradient(1px 1px at 40% 80%, #fff3, 0 1px),
-        radial-gradient(1px 1px at 90% 20%, #fffb, 0 1px);
-      animation: twinkle 8s infinite alternate;
-      pointer-events: none;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
       z-index: 0;
-    }
-
-    @keyframes bgPulse {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-
-    @keyframes twinkle {
-      0% { opacity: 0.3; }
-      100% { opacity: 1; }
     }
 
     .card {
       position: relative;
       z-index: 2;
-      background: rgba(8, 5, 18, 0.85);
-      backdrop-filter: blur(14px);
+      background: rgba(6, 3, 15, 0.88);
+      backdrop-filter: blur(16px);
       border-radius: 28px;
       padding: 36px;
       max-width: 540px;
       width: 100%;
       box-shadow:
-        0 0 40px rgba(155, 0, 255, 0.2),
-        0 0 80px rgba(100, 0, 200, 0.15);
-      border: 1px solid rgba(100, 80, 200, 0.2);
+        0 0 40px rgba(155, 0, 255, 0.3),
+        0 0 80px rgba(100, 0, 200, 0.2);
+      border: 1px solid rgba(120, 80, 220, 0.25);
       animation: cardPop 1s cubic-bezier(0.34, 1.56, 0.64, 1) forwards;
       opacity: 0;
     }
@@ -79,7 +60,7 @@
     h1 {
       font-size: 2.4rem;
       margin-bottom: 26px;
-      background: linear-gradient(90deg, #ff6b9d, #ff8e53, #ff6b9d);
+      background: linear-gradient(90deg, #ff6b9d, #ff8e53);
       -webkit-background-clip: text;
       background-clip: text;
       color: transparent;
@@ -134,7 +115,6 @@
       line-height: 1.5;
     }
 
-    /* Реакции */
     .reactions {
       display: flex;
       justify-content: center;
@@ -143,7 +123,7 @@
     }
 
     .reaction-btn {
-      background: rgba(30, 20, 50, 0.6);
+      background: rgba(20, 10, 40, 0.7);
       border: none;
       width: 70px;
       height: 70px;
@@ -156,11 +136,11 @@
       color: #ff6b9d;
       cursor: pointer;
       transition: all 0.4s cubic-bezier(0.68, -0.55, 0.27, 1.55);
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
     }
 
     .reaction-btn:hover {
-      transform: scale(1.2) rotate(10deg);
+      transform: scale(1.2) rotate(8deg);
       color: #ff4da6;
       box-shadow: 0 0 25px rgba(255, 107, 157, 0.6);
     }
@@ -172,7 +152,11 @@
       font-weight: 600;
     }
 
-    /* Адаптация */
+    .liked {
+      color: #ff4da6 !important;
+      transform: scale(1.15) !important;
+    }
+
     @media (max-width: 480px) {
       h1 { font-size: 2rem; }
       .info-item { font-size: 1rem; }
@@ -185,6 +169,9 @@
   </style>
 </head>
 <body>
+
+  <!-- Частицы -->
+  <div id="particles-js"></div>
 
   <div class="card">
     <h1>BIO</h1>
@@ -206,30 +193,94 @@
         <div class="reaction-count" id="likeCount">0</div>
       </button>
       <a href="https://t.me/FrezzyCold" target="_blank">
-        <button class="reaction-btn">
-          💬
-        </button>
+        <button class="reaction-btn">💬</button>
       </a>
     </div>
   </div>
 
+  <!-- Particles.js -->
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <script>
-    // Счётчик лайков с сохранением
+    particlesJS("particles-js", {
+      particles: {
+        number: { value: 60, density: { enable: true, value_area: 800 } },
+        color: { value: "#4a00e0" },
+        shape: { type: "circle" },
+        opacity: { value: 0.2, random: true },
+        size: { value: 3, random: true },
+        line_linked: {
+          enable: true,
+          distance: 150,
+          color: "#8a2be2",
+          opacity: 0.15,
+          width: 1
+        },
+        move: {
+          enable: true,
+          speed: 1.2,
+          direction: "none",
+          random: true,
+          straight: false,
+          out_mode: "out",
+          bounce: false
+        }
+      },
+      interactivity: {
+        detect_on: "canvas",
+        events: {
+          onhover: { enable: true, mode: "repulse" },
+          onclick: { enable: false },
+          resize: true
+        }
+      },
+      retina_detect: true
+    });
+  </script>
+
+  <script>
+    // Очистка данных like в localStorage (удаляем старые ключи)
+    try {
+      localStorage.removeItem('bioLikes');
+      localStorage.removeItem('bioLikesTotal');
+      localStorage.removeItem('bioUserLiked');
+    } catch (e) {
+      // Игнорируем ошибки в окружениях без localStorage
+      console.warn('localStorage unavailable or inaccessible', e);
+    }
+
     const likeBtn = document.getElementById('likeBtn');
     const likeCountEl = document.getElementById('likeCount');
 
-    let likes = localStorage.getItem('bioLikes');
-    likes = likes ? parseInt(likes) : 0;
+    // Загружаем данные
+    let likes = parseInt(localStorage.getItem('bioLikesTotal')) || 0;
+    const hasLiked = localStorage.getItem('bioUserLiked') === 'true';
+
     likeCountEl.textContent = likes;
+    if (hasLiked) {
+      likeBtn.classList.add('liked');
+      likeBtn.title = 'Уже лайкал';
+      likeBtn.disabled = true;
+    }
 
     likeBtn.addEventListener('click', () => {
+      if (localStorage.getItem('bioUserLiked') === 'true') return;
+
       likes++;
       likeCountEl.textContent = likes;
-      localStorage.setItem('bioLikes', likes);
+      try {
+        localStorage.setItem('bioLikesTotal', likes);
+        localStorage.setItem('bioUserLiked', 'true');
+      } catch (e) {
+        console.warn('Failed to write to localStorage', e);
+      }
+
+      likeBtn.classList.add('liked');
+      likeBtn.disabled = true;
+      likeBtn.title = 'Спасибо за лайк!';
+
+      // Короткая анимация
       likeBtn.style.transform = 'scale(1.3)';
-      setTimeout(() => {
-        likeBtn.style.transform = '';
-      }, 200);
+      setTimeout(() => likeBtn.style.transform = '', 200);
     });
   </script>
 </body>
